@@ -62,13 +62,13 @@ SHARED_TARGETS = $(shared)
 INSTALL_TARGETS = install-modules
 
 install-modules:
-	@test -d $(libexecdir) || $(MKINSTALLDIRS) $(libexecdir);
+	@test -d $(DESTDIR)$(libexecdir) || $(MKINSTALLDIRS) $(DESTDIR)$(libexecdir);
 	@builtin='$(BUILTIN_LIBS)'; \
 	has_mod_so=`echo $$builtin|sed 's/^.*mod_so.*$$/has_mod_so/'`; \
 	if [ "x$$has_mod_so" = "xhas_mod_so" ]; then \
 		list='$(shared)'; \
 		for i in $$list; do \
-			$(top_srcdir)/build/instdso.sh SH_LIBTOOL='$(SH_LIBTOOL)' $$i $(libexecdir); \
+			$(top_srcdir)/build/instdso.sh SH_LIBTOOL='$(SH_LIBTOOL)' $$i $(DESTDIR)$(libexecdir); \
 		done; \
 	fi	
 
